# emba-bp-analyst

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AI-rules.md  Dockerfile  How-to-setup.md  README.md  TODO.md  alembic.ini  architecture.md  craftsmanship.md  docker-entrypoint.sh  livrable.md  pricing.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  deploy.yml  e2e.yml  keep-mysql-awake.yml  (+1 more)
app/: __init__.py  config.py  db.py  main.py
db/: schema.sql
docs/: AI-agents-prompts.md  AI-rules.md  How-to-setup.md  Projet2.docx  Projet2.extracted.txt  SESSION-HANDOFF.md  TEST-REPORT-2026-06-15.md  architecture.md  backlog.md  craftsmanship.md  diagrammes.md  livrable.md  openapi.yaml
e2e/: package-lock.json  package.json  playwright.config.js
infra/: README.md  provision.sh
migrations/: env.py  script.py.mako
scripts/: api_probe.py  generate_sample_imports.py  jira-add-comment.ps1  security_to_jira.py  seed.py  setup-jira-mcp.ps1
tests/: __init__.py  conftest.py  test_ai_agents.py  test_ai_client.py  test_ai_description.py  test_ai_evaluation.py  test_ai_generation.py  test_config.py  test_db_migrations.py  test_dimensions.py  test_financials.py  test_generation.py  test_generation_scenarios.py  test_health.py  test_imports.py  test_imports_detailed.py  test_migrations.py  test_projects.py  test_projects_crud.py  test_projects_score.py  test_scoring.py  test_security_to_jira.py  test_seed_reference.py  test_ui.py
(+43 files in other folders)
