[project]
name = "emba-bp-analyst"
version = "0.1.0"
description = "Outil de création automatisée de Business Plan — EMBA EPITECH P2026"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (sécurité)
    "N",   # pep8-naming
]
ignore = [
    "S101",  # assert dans les tests OK
    "B008",  # Depends() FastAPI OK
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
fail_under = 80
